# autoresearch-halo-strix

./: .gitignore  CLAUDE.md  IDEA.md  PLAN.md  README.md  program.md  pyproject.toml
agents/engineer/: CLAUDE.md
agents/planner/: CLAUDE.md
agents/reporter/: CLAUDE.md
agents/researcher/: CLAUDE.md
agents/reviewer/: CLAUDE.md
agents/schemas/: HYPOTHESIS.md  PLAN.md  RESULTS.md
agents/trainer/: CLAUDE.md
autostrix/: Cargo.toml
autostrix/src/: main.rs
configs/: baseline.toml
src/: experiment.py  train.py
src/components/: __init__.py  attention.py  embedding.py  head.py  mlp.py  norm.py  position.py
src/data/: dataloader.py  prepare.py  tokenizer.py
src/eval/: metrics.py
src/model/: block.py  config.py  gpt.py
src/optim/: muon.py  muon_adamw.py  schedules.py
