[package]
name = "autostrix"
version = "0.2.0"
edition = "2021"
description = "Orchestrator and monitoring tool for the autoresearch AI lab"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
comfy-table = "7"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
